--- a/composer.json
+++ b/composer.json
@@ -30,14 +30,14 @@
         "spatie/laravel-permission": "^5.0",
         "spatie/laravel-query-builder": "^5.0",
         "spatie/laravel-schemaless-attributes": "^2.0",
-        "spatie/period": "^1.5"
+        "spatie/period": "^1.5",
+        "laravel/ui": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
         "barryvdh/laravel-ide-helper": "^2.8",
         "spatie/laravel-ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
-        "laravel/ui": "^4.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0",
